# sfl

./: .gitignore  AndroidManifest.xml  CMakeLists.txt  G-Ear core-Prefix.pch  ImmutableVector.h  LICENSE  Makefile  Map.h  Maybe.h  Prelude.h  README.md  Range.h  STM.h  Split.h  clearcore.sh  copytoandroid.sh  copytomac.sh  copytomacdeb.sh  copytoqtlinux.sh  copytoqtmac.sh  copytoqtwin.bat  copytoqtwindeb.bat  copytoqtwindeblibonly.bat  copytoqtwinrel.bat  copytoqtwinrellibonly.bat  just_ptr.h  qtpreferencespanel.h  subtrees  sum.h
G-Ear core.xcodeproj/: project.pbxproj
G-Ear core.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
core/: AddToPlaylistIntent.cpp  AddToPlaylistIntent.h  Album.cpp  Album.h  AlbumArtStash.cpp  AlbumInfo.cpp  AllAccessPlaylist.cpp  AllAccessPlaylist.h  AllAccessSongArray.cpp  AllAccessSongArray.h  AllAccessToLibraryIntent.cpp  AllAccessToLibraryIntent.h  AppBase.cpp  Artist.cpp  Artist.h  Async.h  AsyncHttp.cpp  AsyncHttp.h  AsyncRunner.cpp  AsyncRunner.h  AudioDevice.cpp  AudioDeviceUnionWorker.cpp  BasicPlaylist.cpp  BasicPlaylist.h  Bridge.cpp  Bridge.h  CircularBuffer.cpp  CoreDebug.h  CreatePlaylistIntent.cpp  CreatePlaylistIntent.h  CreateRadioIntent.cpp  CreateRadioIntent.h  Db.cpp  Db.h  DbService.cpp  DbService.h  DbSession.cpp  DbSession.h  DecoderAv.cpp  DecoderAv.h  (+267 more)
core/Apple/: AppleFileManager.mm  AppleHttpDownloader.h  AppleHttpDownloader.mm  AppleKeychain.h  AppleKeychain.mm  ApplePreferences.mm  AppleSilenceWorker.cpp  ChromeCastApple.h  ChromeCastApple.mm  DecoderAbstract.h  DecoderAbstract.mm  IDelegate.h  IDelegate.mm  InAppStore.h  InAppStore.mm  KeychainHandler.h  KeychainHandler.mm  PlaybackWorker.mm  PlaybackWorkerImpl.h  PlaybackWorkerImpl.mm  PreferencesPanel.mm  receigen.h
core/Base/: BackgroundExecutor.cpp  BaseContainerUtility.h  BaseUtility.cpp  DefaultExecutor.cpp  EventSignal.cpp  ExecutorPool.cpp  ExecutorPool.h  GuardedData.h  IExecutor.cpp  InstantExecutor.cpp  InstantExecutor.h  Interruptor.cpp  Logger.cpp  Logger.h  MainExecutor.cpp  PoolableExecutor.cpp  Timer.cpp  Timer.h  ValueSignal.cpp
core/Cast/: AuthMessage.cpp  AuthMessage.h  CastApplication.cpp  CastApplication.h  CastChannel.cpp  CastChannel.h  CastDevice.cpp  CastDevice.h  CastPlaybackWorker.cpp  CastPlaybackWorker.h  CastSession.cpp  CastSession.h  ChromeCast.cpp  ChromeCast.h  DataTransformer.cpp  DataTransformer.h  HeartBeatMessage.cpp  HeartBeatMessage.h  JsonCastMessage.cpp  JsonCastMessage.h  PlainCastMessage.cpp  PlainCastMessage.h  StreamClient.cpp  StreamClient.h  Streamer.cpp  Streamer.h
core/Gui/: BitmapImage.cpp  BlackTheme.cpp  BlackTheme.h  BlueTheme.cpp  CocoaTheme.cpp  Color.cpp  Gradient.cpp  IPaintable.cpp  IPainter.cpp  ITheme.cpp  ModernDarkTheme.cpp  NamedImage.cpp  Rules.cpp  Style.cpp  StyleRules.cpp  TextAttributes.cpp  ThemeManager.cpp  Tinter.cpp
core/Unit Tests/: MockSession.cpp  MockSession.h  TestAllAccessSongArray.cpp  TestDownloader.cpp  TestEventSignal.cpp  TestGooglePlayConceiver.cpp  TestGooglePlaySession.cpp  TestGooglePlaySignature.cpp  TestHttpDownloader.cpp  TestIAsyncData.cpp  TestISongArray.cpp  TestPlaybackData.cpp  TestSerialExecutor.cpp  TestSocket.cpp  TestStoredSongArray.cpp  TestStringUtility.mm  TestWebCookie.cpp  TestYouTubeProtocol.cpp  fakemain.h  fakemain.m  main.cpp  stringembed.sh
core/google/: config.h
core/jsoncpp/: jsoncpp.cpp
core/ogg/: os_types.h
core/public/: AlbumInfo.h  AtomicPtr.h  AudioDeviceUnionWorker.h  CircularBuffer.h  ConstPtr.h  Environment.h  IAsyncData.h  IAudioGenerator.h  IJavascriptEngine.h  IPlaylist.h  IPreferences.h  IPreferencesPanel.h  IService.h  ISession.h  ISongNoIndexIntent.h  LastFmController.h  LastFmProtocol.h  LocalSession.h  OfflineState.h  PlaybackController.h  PlayerBase.h  Preference.h  PreferenceGroup.h  RemoteControl.h  ServiceManager.h  SessionManager.h  SongEntry.h  SongGrouping.h
g-ear-Qt/: App.cpp  App.h  BoostFileManager.h  GEarGui.qrc  Painter.cpp  Painter.h  PlaybackWorker.cpp  PlaybackWorkerDX.cpp  QTKeychain.cpp  QTKeychain.h  SharedMemoryStatusThread.h  error_code.cpp  g-ear-Qt.pro  main.cpp  qtquick2controlsapplicationviewer.cpp  qtquick2controlsapplicationviewer.h  qtwebwindow.cpp  thread.cpp
g-ear-Qt/Global/: PreferenceKey.h
g-ear-Qt/QML/: ColorTemplate.qml  GEarGui.qml  GradientTemplate.qml  LeftBar.qml  PlaylistView.qml  RightArea.qml  SettingsTab.qml  SettingsTabItem.qml  TopBar.qml
g-ear-Qt/QmlController/: MainWindowController.cpp  MainWindowController.h  PlaybackPanelController.cpp  PlaybackPanelController.h  PlaylistController.cpp  PlaylistController.h  QmlController.cpp  QmlController.h  QmlControllerManager.cpp  QmlControllerManager.h  SettingPanelController.cpp  SettingPanelController.h  SongListController.cpp  SongListController.h  StatusBarController.cpp  StatusBarController.h
g-ear-Qt/QmlModel/: ListModel.h  PlaylistCategoryModel.cpp  PlaylistCategoryModelItem.cpp  PlaylistModel.cpp  PlaylistModel.h  SongListContextMenuModel.cpp  SongListModel.cpp  (+4 more)
jni/: Android.mk  Application.mk
keys/: amazon
tests/: CMakeLists.txt  FakeApp.h  FakeOAuthConnection.h  FakePlaybackData.h  MockPlaylist.h  MockSession.h  SimpleServer.h  TestDownloader.cpp  TestFreeSearch.cpp  TestGoogleProtocol.cpp  TestJustPtr.cpp  TestMaybe.cpp  TestPlaybackItem.cpp  TestPlayer.cpp  TestPlaylist.cpp  TestPrelude.cpp  TestQueue.cpp  TestRemote.cpp  TestRemoteControl.cpp  TestSTM.cpp  TestSessionManager.cpp  TestSortOrder.cpp  TestSplit.cpp  TestStringCompare.cpp  TestStyle.cpp  TestSum.cpp  TestThumbs.cpp  TestUnion.cpp  TestUrlEncode.cpp  TestYouTubeSession.cpp  async.h  googlemusiclisten-201410-2.html  googlemusiclisten-201410.html  googlemusiclisten-oldway.html  googlemusiclisten.html  stf.h  test.css  tests.cpp  tests.h  videoinfo.txt  (+1 more)
tests/xcode/geartest/: Makefile
tests/xcode/geartest/geartest.xcodeproj/: project.pbxproj
tests/xcode/geartest/geartest.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
tests/xcode/geartest/geartest.xcodeproj/xcuserdata/zsszatmari.xcuserdatad/xcschemes/: xcschememanagement.plist
(+97 files in other folders)
